--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "start": "MONGO_URL=mongodb://localhost:27017/database node dist/apps/index"
+    "start": "MONGO_URL=mongodb://localhost:27017/database node dist/apps/index",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -9,9 +11,9 @@
   },
   "author": "Peter Szombati",
   "dependencies": {
-    "@fastify/cors": "^11.0.1",
-    "fastify": "^5.2.2",
-    "mongoose": "^8.13.2"
+    "@fastify/cors": "11.0.1",
+    "fastify": "5.2.2",
+    "mongoose": "8.13.2"
   },
   "devDependencies": {
     "@types/chai": "4.3.16",
@@ -19,8 +21,15 @@
     "@types/mocha": "10.0.6",
     "@types/node": "20.12.11",
     "chai": "5.1.1",
+    "eslint": "9.24.0",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-plugin-prettier": "5.2.6",
+    "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-unused-imports": "4.1.4",
     "mocha": "10.4.0",
+    "prettier": "3.5.3",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.29.1"
   }
 }
