--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: "3.8"
 
 services:
+  redis:
+    image: redis:6
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
   mongo:
     image: mongo:6
     restart: always
@@ -11,3 +17,4 @@ services:
 
 volumes:
   mongo-data:
+  redis-data:
