--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,7 +12,9 @@
   "author": "Peter Szombati",
   "dependencies": {
     "@fastify/cors": "11.0.1",
+    "bullmq": "5.49.0",
     "fastify": "5.2.2",
+    "ioredis": "5.6.1",
     "mongoose": "8.13.2"
   },
   "devDependencies": {
